--- a/Quarto Docs for Website/Independent t test.qmd
+++ b/Quarto Docs for Website/Independent t test.qmd
@@ -155,7 +155,7 @@ The experimental assumptions would be:
 
 ```{r, eval=TRUE}
 library(haven)
-Invisibility <- read_sav("Invisibility.sav")
+Invisibility <- read_sav("https://github.com/jvanster/Psy_300_Datasets/raw/refs/heads/main/SPSS_Datasets/Invisibility.sav")
 ```
 
 ### Inspect variables
